# BachelorProjectEnergyManager

./: .clang-format  .gitignore  CMakeLists.txt  Compiler.cmake  Dependencies.cmake  Dockerfile  InteractiveShell.sh  LICENSE  Metadata.tex  OpenVisualizer.sh  Packages.tex  Paths.cmake  README.md  Report.ist  Report.tex  Run.sh  Setup.sh  docker-compose.yml  main.acn  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  metadata.tex  packages.tex
EARTest/: CMakeLists.txt
EARTest/Source/: Main.c  Main.cpp
EnergyManager/: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  InstallDependencies.cmake  Paths.cmake  README.md
EnergyManager/Console/: CMakeLists.txt
EnergyManager/Console/Source/: Main.cu
EnergyManager/Profiling/: CMakeLists.txt
EnergyManager/Profiling/All/Source/: Main.cpp
EnergyManager/Profiling/BFS/: CMakeLists.txt
EnergyManager/Profiling/BFS/Source/: Main.cpp
EnergyManager/Profiling/CUBLAS/: CMakeLists.txt
EnergyManager/Profiling/CUFFT/: CMakeLists.txt
EnergyManager/Profiling/CUFFT/Source/: Main.cpp
EnergyManager/Profiling/KMeans/: CMakeLists.txt
EnergyManager/Profiling/KMeans/Source/: Main.cpp
EnergyManager/Profiling/MatrixMultiply/: CMakeLists.txt
EnergyManager/Profiling/MatrixMultiply/Source/: Main.cpp
EnergyManager/Resources/: .gitignore
EnergyManager/Resources/Data/: .gitignore
EnergyManager/Resources/Libraries/: .gitignore
EnergyManager/Resources/Meetings/: 2020-06-19 14:00.md  2020-06-25 10:00.md  2020-08-10 13:00.md  2020-08-14 10:00.md
EnergyManager/Resources/Models/: StaticDVFS
EnergyManager/Resources/Scripts/: Build.sh  Clean.sh  CompileJob.sh  FixedFrequencyMatrixMultiplyTests.sh  Job.sh  JobRunner.sh  MatrixMultiplyTest.sh  SyntheticAllocateFreeWorkloadTest.sh  SyntheticGPUActiveInactiveWorkloadTest.sh  SyntheticGPUAllocateFreeWorkloadTest.sh  SyntheticGPUVectorAddWorkloadTest.sh  VectorAddSubtractTest.sh
EnergyManager/Resources/Servers/: Servers.md
EnergyManager/Source/: EnergyManager.cu  Main.cu
EnergyManager/Source/EnergyManager/: Application.cpp  Application.hpp
EnergyManager/Source/EnergyManager/Benchmarking/Operations/: AddGPUOperation.cu  AddGPUOperation.hpp  AllocateCPUOperation.cpp  AllocateCPUOperation.hpp  AllocateGPUOperation.cpp  AllocateGPUOperation.hpp  AssignCPUOperation.cpp  AssignCPUOperation.hpp  CopyCPUToGPUOperation.cpp  CopyCPUToGPUOperation.hpp  CopyGPUToCPUOperation.cpp  FreeCPUOperation.hpp  (+12 more)
EnergyManager/Source/EnergyManager/EnergySaving/: CPUEnergyManager.hpp  EnergyManager.hpp  GPUEnergyManager.hpp  NodeEnergyManager.hpp
EnergyManager/Source/EnergyManager/Hardware/: CPU.cpp  CPU.hpp  Device.cpp  Device.hpp  GPU.cpp  GPU.hpp  Node.cpp  Node.hpp  Processor.hpp
EnergyManager/Source/EnergyManager/Monitoring/: ApplicationMonitor.cpp  ApplicationMonitor.hpp  CPUMonitor.cpp  CPUMonitor.hpp  DeviceMonitor.cpp  DeviceMonitor.hpp  GPUMonitor.cpp  GPUMonitor.hpp  Monitor.cpp  Monitor.hpp  NodeMonitor.cpp  NodeMonitor.hpp  ProcessorMonitor.cpp  ProcessorMonitor.hpp  WorkloadMonitor.cpp  WorkloadMonitor.hpp
EnergyManager/Source/EnergyManager/Persistence/: Entity.cpp  Entity.hpp
EnergyManager/Source/EnergyManager/Profiling/: CPUMonitor.cpp  CPUMonitor.hpp  DeviceMonitor.cpp  DeviceMonitor.hpp  GPUMonitor.cpp  GPUMonitor.hpp  Monitor.cpp  Monitor.hpp  NodeMonitor.cpp  NodeMonitor.hpp  ProcessorMonitor.cpp  ProcessorMonitor.hpp  SyntheticGPUWorkload.cpp  SyntheticGPUWorkload.hpp  SyntheticWorkload.cpp  SyntheticWorkload.hpp  WorkloadMonitor.cpp  WorkloadMonitor.hpp
EnergyManager/Source/EnergyManager/Testing/: Application.cpp  Application.hpp  TestResults.cpp  TestResults.hpp  TestRunner.cpp  TestRunner.hpp
EnergyManager/Source/EnergyManager/Utility/: Exception.cpp  Exception.hpp  Logging.hpp  Serialization.hpp  Text.hpp  TypeTraits.hpp
EnergyManager/Source/EnergyManager/WorkloadDetection/: CPUWorkloadAnalyzer.cpp  CPUWorkloadAnalyzer.hpp  GPUWorkloadAnalyzer.cpp  GPUWorkloadAnalyzer.hpp  NodeWorkloadAnalyzer.cpp  NodeWorkloadAnalyzer.hpp  WorkloadAnalyzer.cpp  WorkloadAnalyzer.hpp
EnergyManager/Tests/: CMakeLists.txt
EnergyManager/Tests/ActiveInactive/: CMakeLists.txt
EnergyManager/Tests/ActiveInactive/Source/: Main.cu
EnergyManager/Tests/AllocateFree/: CMakeLists.txt
EnergyManager/Tests/AllocateFree/Source/: Main.cpp  Main.cu
EnergyManager/Tests/FixedFrequencyMatrixMultiply/Source/: Main.cu
EnergyManager/Tests/LinearRegression/: CMakeLists.txt
EnergyManager/Tests/LinearRegression/Source/: Main.cpp
EnergyManager/Tests/MatrixMultiply/: CMakeLists.txt
EnergyManager/Tests/MatrixMultiply/Source/: Main.cu
EnergyManager/Tests/Ping/: CMakeLists.txt
EnergyManager/Tests/Ping/Source/: Main.cu
EnergyManager/Tests/VectorAdd/: CMakeLists.txt
EnergyManager/Tests/VectorAdd/Source/: Main.cpp  Main.cu
EnergyManager/Tests/VectorAddSubtract/: CMakeLists.txt
EnergyManager/Tests/VectorAddSubtract/Source/: Main.cpp  Main.cu
EnergyManager/Training/: CMakeLists.txt
EnergyManager/Training/MatrixMultiply/: CMakeLists.txt
EnergyManager/Training/MatrixMultiply/Source/: Main.cpp
Profiling/: CMakeLists.txt  README.md
Profiling/ActivityTrace/: CMakeLists.txt  activity_trace_async.cpp  vec.cu
Profiling/ActivityTrace/Source/: Main.cu
Profiling/All/: CMakeLists.txt
Profiling/All/Source/: Main.cpp
Profiling/BFS/: CMakeLists.txt
Profiling/BFS/Source/: Main.cpp
Profiling/CUBLAS/Source/: Main.cpp
Profiling/CUFFT/Source/: Main.cpp
Profiling/Jacobi/: CMakeLists.txt
Profiling/Jacobi/Source/: Main.cpp
Profiling/KMeans/Source/: Main.cpp
Profiling/MatrixMultiply/: CMakeLists.txt
Profiling/MatrixMultiply/Source/: Main.cpp
Profiling/Source/: BFS.hpp  Configuration.hpp  Experiment.hpp  Jacobi.hpp  KMeans.hpp  Main.cpp  MatrixMultiply.hpp
Reporter/: CMakeLists.txt  README.md
Reporter/Source/: Main.cu
ShowFrequencies/: CMakeLists.txt
ShowFrequencies/Source/: Main.cu
Software/Source/project/: .gitignore  CMakeLists.txt
Software/Source/project/Source/: Application.cpp  Application.hpp  Main.cpp  Main.cu
Source/project/: CMakeLists.txt
(+412 files in other folders)
